[CW-000] Fix l'image de profile visible seulement sur la page d'accueil (path absolu)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -279,7 +279,7 @@ body {
 }
 
 .student-row-element, .student-header-element {
-    margin: 1em;
+    margin: 1.75rem;
 }
 
 .student-row:nth-child(even) {background: #f6f6f6}
